zerocopy-derive/tests/ui-nightly/privacy.nightly.stderr
warning: variants `A` and `B` are never constructed
  --> $DIR/privacy.rs:74:9
   |
73 |     pub enum Enum {
   |              ---- variants in this enum
74 |         A(u8, u16),
   |         ^
75 |         B { a: u8, b: u16 },
   |         ^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

error: type `private::_::_::_::ẕb` is private
   --> $DIR/privacy.rs:100:9
    |
100 |         _,
    |         ^ private type

error: type `private::_::_::_::ẕ1` is private
   --> $DIR/privacy.rs:113:9
    |
113 |         _,
    |         ^ private type

error: type `private::_::_::_::ẕb` is private
   --> $DIR/privacy.rs:122:49
    |
122 |     let _: <Union as zerocopy_renamed::HasField<_, _, { zerocopy_renamed::ident_id!(b) }>>::Type =
    |                                                 ^ private type

error: aborting due to 3 previous errors; 1 warning emitted

